# cinema-api-service/gen/openapi.json
@@ -8,10 +8,10 @@
     "url" : "http://localhost:10010/api/v1"
   } ],
   "paths" : {
-    "/musicevents" : {
+    "/map" : {
       "get" : {
         "description" : "Returns list of musical city musicevents",
-        "operationId" : "musicevents",
+        "operationId" : "map",
         "parameters" : [ {
           "name" : "date",
           "in" : "query",
@@ -26,7 +26,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/MusicEventResponse"
+                  "$ref" : "#/components/schemas/MapResponse"
                 }
               }
             }
@@ -43,44 +43,7 @@
           }
         }
       },
-      "x-swagger-router-controller" : "music-controller"
-    },
-    "/weeklyevents" : {
-      "get" : {
-        "description" : "Returns list of musical city weeklyevents",
-        "operationId" : "weeklyevents",
-        "parameters" : [ {
-          "name" : "date",
-          "in" : "query",
-          "description" : "FIltering date",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Success",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/MusicWeeklyEventResponse"
-                }
-              }
-            }
-          },
-          "default" : {
-            "description" : "Error",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          }
-        }
-      },
-      "x-swagger-router-controller" : "music-controller"
+      "x-swagger-router-controller" : "map-controller"
     },
     "/swagger" : {
       "x-swagger-pipe" : "swagger_raw"
@@ -88,107 +51,29 @@
   },
   "components" : {
     "schemas" : {
-      "MusicEventResponse" : {
+      "MapResponse" : {
         "type" : "array",
         "items" : {
-          "$ref" : "#/components/schemas/MusicEvent"
+          "$ref" : "#/components/schemas/Map"
         }
       },
-      "MusicWeeklyEventResponse" : {
-        "type" : "array",
-        "items" : {
-          "$ref" : "#/components/schemas/MusicWeeklyEvent"
-        }
-      },
-      "MusicEvent" : {
-        "required" : [ "id" ],
+      "Map" : {
+        "required" : [ "date" ],
         "type" : "object",
         "properties" : {
-          "id" : {
-            "type" : "string"
-          },
           "name" : {
             "type" : "string"
           },
-          "image" : {
+          "title" : {
+            "type" : "string"
+          },
+          "price" : {
+            "type" : "string"
+          },
+          "sits" : {
             "type" : "string"
           },
           "date" : {
-            "type" : "string"
-          },
-          "location" : {
-            "type" : "string"
-          },
-          "band" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/Band"
-            }
-          }
-        }
-      },
-      "MusicWeeklyEvent" : {
-        "required" : [ "id" ],
-        "type" : "object",
-        "properties" : {
-          "beggining" : {
-            "type" : "string"
-          },
-          "end" : {
-            "type" : "string"
-          },
-          "id" : {
-            "type" : "string"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "image" : {
-            "type" : "string"
-          },
-          "date" : {
-            "type" : "string"
-          },
-          "location" : {
-            "type" : "string"
-          },
-          "band" : {
-            "type" : "string"
-          }
-        }
-      },
-      "Band" : {
-        "required" : [ "BandId", "BandName" ],
-        "type" : "object",
-        "properties" : {
-          "BandId" : {
-            "type" : "string"
-          },
-          "BandName" : {
-            "type" : "string"
-          },
-          "image" : {
-            "type" : "string"
-          },
-          "people" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/People"
-            }
-          }
-        }
-      },
-      "People" : {
-        "required" : [ "PersonId", "PersonIdName" ],
-        "type" : "object",
-        "properties" : {
-          "PersonId" : {
-            "type" : "string"
-          },
-          "PersonIdName" : {
-            "type" : "string"
-          },
-          "image" : {
             "type" : "string"
           }
         }
