# cinema-react-app/gen/api/src/models/ModelMap.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Music service
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ModelMap
+ */
+export interface ModelMap {
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelMap
+     */
+    name?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelMap
+     */
+    title?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelMap
+     */
+    price?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelMap
+     */
+    sits?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ModelMap
+     */
+    date: string;
+}
+
+export function ModelMapFromJSON(json: any): ModelMap {
+    return ModelMapFromJSONTyped(json, false);
+}
+
+export function ModelMapFromJSONTyped(json: any, ignoreDiscriminator: boolean): ModelMap {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'name': !exists(json, 'name') ? undefined : json['name'],
+        'title': !exists(json, 'title') ? undefined : json['title'],
+        'price': !exists(json, 'price') ? undefined : json['price'],
+        'sits': !exists(json, 'sits') ? undefined : json['sits'],
+        'date': json['date'],
+    };
+}
+
+export function ModelMapToJSON(value?: ModelMap | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'name': value.name,
+        'title': value.title,
+        'price': value.price,
+        'sits': value.sits,
+        'date': value.date,
+    };
+}
+
+
