# cinema-react-app/gen/api/src/models/People.ts
@@ -1,73 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Music service
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 0.1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface People
- */
-export interface People {
-    /**
-     * 
-     * @type {string}
-     * @memberof People
-     */
-    PersonId: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof People
-     */
-    PersonIdName: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof People
-     */
-    image?: string;
-}
-
-export function PeopleFromJSON(json: any): People {
-    return PeopleFromJSONTyped(json, false);
-}
-
-export function PeopleFromJSONTyped(json: any, ignoreDiscriminator: boolean): People {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'PersonId': json['PersonId'],
-        'PersonIdName': json['PersonIdName'],
-        'image': !exists(json, 'image') ? undefined : json['image'],
-    };
-}
-
-export function PeopleToJSON(value?: People | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'PersonId': value.PersonId,
-        'PersonIdName': value.PersonIdName,
-        'image': value.image,
-    };
-}
-
-
