# cinema-react-app/gen/api/src/models/index.ts
@@ -1,5 +1,2 @@
-export * from './Band';
 export * from './ErrorResponse';
-export * from './MusicEvent';
-export * from './MusicWeeklyEvent';
-export * from './People';
+export * from './ModelMap';
